--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -188,6 +188,17 @@
                       <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(30).webp" alt="img"></li>
                       <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(31).webp" alt="img"></li>
                       <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(32).webp" alt="img"></li>
+
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(40).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(41).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(42).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(43).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(44).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(45).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(46).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(47).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(48).webp" alt="img"></li>
+                      <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1(49).webp" alt="img"></li>
                      
 
 
