--- a/public/elbeyli-waterfall-test.html
+++ b/public/elbeyli-waterfall-test.html
@@ -153,7 +153,7 @@
       </section>
       <!--Top pics-->
 
-       <section class="product-detail-main pt-100">
+       <section class="listing-details">
         <div class="container">
           <div class="row">
             <div class="col-xl-8 col-12">
