--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -183,7 +183,7 @@
       </section>
       <!--Top pics-->
 
-       <section class="product-detail-main pt-100">
+       <section class="listing-details">
         <div class="container">
           <div class="row">
             <div class="col-xl-8 col-12">
