--- a/public/faq.html
+++ b/public/faq.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ</title>
     <!-- favicons Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link rel="stylesheet" href="assets/css/fontawesome.min.css">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
