--- a/public/derbent-kale-1.html
+++ b/public/derbent-kale-1.html
@@ -450,8 +450,8 @@
                           <div class="tab-pane fade show active" id="floor-tab1-pane" role="tabpanel" aria-labelledby="floor-tab1" tabindex="0">
                               <div class="property-grid-plan">
                                   <div class="property-grid-thumb">
-                                      <a href="https://tasmahal.s3.eu-north-1.amazonaws.com/blueprints/Kale11.png" class="quick-popup">
-                                        <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/blueprints/Kale11.png" class="position-r transition"
+                                      <a href="https://tasmahal.s3.eu-north-1.amazonaws.com/blueprints/Kale1_1.png" class="quick-popup">
+                                        <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/blueprints/Kale2_1.png" class="position-r transition"
                                           alt="img"></a>
                                   </div>
                                   
